--- a/01-form-validator/style.css
+++ b/01-form-validator/style.css
@@ -8,30 +8,85 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
-body {
-    background-color: #f9fafb;
-    display: grid;
-    place-content: center;
+.wrapper {
+    /* background-image: url(img/main-bg-lg.jpg); */
+    background: linear-gradient(rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, .5)), url(img/main-bg-lg.jpg);
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     min-height: 100vh;
 }
 
-.wrap {
-    background-color: #fff;
-    border-radius: 5px;
+.logo {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    height: 3.5vw;
+    width: 3.5vw;
+    font-size: 2vw;
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+    background-color: rgb(245, 245, 245);
+    color: rgb(236, 88, 88);
+}
+
+.lang button {
+    background: transparent;
+    position: absolute;
+    left: 30px;
+    bottom: 30px;
+    border: 3px solid rgba(156, 75, 75, 0.753);
+    font-size: .7rem;
+    color: rgba(255, 255, 255, 0.801);
+    padding: 6px 8px;
+    border-radius: 20px;
+    cursor: pointer;
+    outline: none;
+    transition: border .3s;
+}
+
+.lang button:hover,
+.lang button:focus {
+    border: 3px solid rgba(241, 64, 64, 0.9);
+}
+
+.lang-select {
+    padding-left: 4px;
+    font-weight: bold;
+}
+
+
+h1 {
+    position: absolute;
+    left: 7vw;
+    bottom: 25vh;
+    font-family: 'Archivo Black', sans-serif;
+    color: white;
+    text-transform: uppercase;
+    font-size: 10vh;
+    text-size-adjust: auto;
+    line-height: 9vh;
+    letter-spacing: -6px;
+}
+
+.form-wrap {
+    background-color: #f9f9f9;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    width: 400px;
+    width: 30vw;
+    margin-right: 50px;
+    padding: 30px 40px;
+    overflow: hidden;
 }
 
 h2 {
     text-align: center;
     margin: 0 0 20px;
-}
-
-.form {
-    padding: 30px 40px;
 }
 
 .form-control {
