--- a/style.css
+++ b/style.css
@@ -53,9 +53,8 @@ input[type=number] {
 }
 
 .docs-lang {
-    width: 330px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     position: absolute;
     left: 30px;
     bottom: 30px;
@@ -113,6 +112,7 @@ input[type=number] {
     cursor: pointer;
     outline: none;
     transition: border .3s;
+    margin-right: 2vw;
 }
 
 .lang button:hover,
@@ -147,8 +147,6 @@ h1 {
     margin-right: 50px;
     overflow: hidden;
 }
-
-
 
 #form {
     position: relative;
@@ -284,8 +282,6 @@ h1 {
 
 .socials>* {
     flex-basis: 30%;
-    padding: .4vw 0;
-    color: white;
     border: 2px solid rgba(153, 153, 153, 0.15);
     border-radius: 5px;
     font-size: 1.3vw;
@@ -293,16 +289,26 @@ h1 {
     transition: background-color .3s;
 }
 
-.facebook {
+.socials a {
+    display: block;
+    width: 100%;
+    padding: .4vw 0;
+    color: white;
+}
+
+.linkedin {
     background-color: #058feb;
 }
 
-.facebook:hover {
+.linkedin:hover {
     background-color: #0582d6;
 }
 
 .google {
     background-color: #fff;
+}
+
+.google a {
     color: tomato;
 }
 
@@ -310,11 +316,11 @@ h1 {
     background-color: #e9e9e9;
 }
 
-.apple {
+.github {
     background-color: black;
 }
 
-.apple:hover {
+.github:hover {
     background-color: #333;
 }
 
@@ -330,7 +336,7 @@ h1 {
 }
 
 .next-page {
-    margin-bottom: 3vw;
+    margin-bottom: 1vw;
     width: 5vw;
     height: 5vw;
     color: var(--input-color);
@@ -451,7 +457,7 @@ input[type='date']:focus {
 h2+p {
     margin: 15px 0 30px;
     color: #999;
-    font-size: 1.4vw;
+    font-size: 1.1vw;
 }
 
 .error-msg {
@@ -463,10 +469,10 @@ h2+p {
 
 .password-checklist {
     list-style-type: none;
-    margin: 1.5vw 0 25px;
+    margin: 1.3vw 0 1.2vw;
     padding-left: 1vw;
     color: #999;
-    font-size: 1vw;
+    font-size: .9vw;
 }
 
 .password-checklist li {
@@ -489,6 +495,10 @@ h2+p {
 .input-great {
     outline: none;
     border: 1px solid rgb(3, 211, 194);
+}
+
+.page-password h2+p {
+    margin: .5vw 0 .5vw;
 }
 
 .page-password .error-msg {
@@ -549,4 +559,8 @@ h2+p {
     margin-top: 2vw;
     width: auto;
     padding: 0 2vw;
+}
+
+.js-label {
+    text-transform: uppercase;
 }
