--- a/css/rwd.css
+++ b/css/rwd.css
@@ -1,9 +1,18 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 6 version
+*/
+
 @media (max-width: 992px) {
     :root {
         font-size: 3.5vw;
     }
 
     .wrapper::before {
+        background: -webkit-gradient(linear, left top, left bottom, color-stop(60%, rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, .5))), url(../img/main-bg-s.jpg);
+        background: -o-linear-gradient(rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, .5)), url(../img/main-bg-s.jpg);
         background: linear-gradient(rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, .5)), url(../img/main-bg-s.jpg);
         background-size: cover;
         background-position: 40% 0;
@@ -34,11 +43,18 @@
 
     .docs-lang {
         position: static;
+        -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
         order: 1;
     }
 
     .wrapper {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
         justify-content: flex-start;
         padding: 4.6rem .3rem 3rem;
     }
@@ -89,20 +105,6 @@
     }
 }
 
-@media (max-width: 600px) {
-    :root {
-        font-size: 4vw;
-    }
-
-    .form-wrap {
-        height: 38rem;
-    }
-
-    .form-control {
-        padding: 2.2rem 2rem 1rem;
-    }
-}
-
 @media (max-width: 992px) and (orientation:landscape) {
     :root {
         font-size: 2.9vw;
@@ -122,6 +124,36 @@
 
     .docs {
         font-size: .8rem;
+    }
+}
+
+@media (max-width: 600px) {
+    :root {
+        font-size: 4vw;
+    }
+
+    .form-wrap {
+        height: 38rem;
+    }
+
+    .form-control {
+        padding: 2.2rem 2rem 1rem;
+    }
+}
+
+@media (max-width: 450px) {
+    :root {
+        font-size: 3.3vw;
+    }
+
+    .error-msg {
+        margin-top: 0;
+    }
+}
+
+@media (max-width: 400px) {
+    :root {
+        font-size: 3.2vw;
     }
 }
 
