--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,6 @@ h1 {
     color: white;
     text-transform: uppercase;
     font-size: 5rem;
-    text-size-adjust: auto;
     line-height: 4rem;
     letter-spacing: -.6rem;
     width: 30rem;
@@ -566,6 +565,10 @@ input[type='date']:focus {
     position: relative;
     z-index: 0;
     background-color: #e9eff0;
+}
+
+#birthday.hideBirthday {
+    display: none;
 }
 
 .birthdate {
